Processor task added
Processor emulator have compiler to generate byte-code from assembler, processor itself to execute byte-code, and disassembler and listing programs that convert byte-code to assembler code and listing, respectively

--- a/Stack/Makefile
+++ b/Stack/Makefile
@@ -2,19 +2,10 @@ include ../Makefile
 
 FLAGS += -Wlarger-than=16384
 
-FLAGS_UNIT_TESTING = $(FLAGS) -D UNIT_TESTING -lm
-
-HDR = stack.h
-
 FILES = main.cpp stack.cpp debug.cpp
 
-FILES_UNIT_TESTING = $(FILES) unittests.cpp
-
-stack: $(FILES) $(HDR)
-	$(CC) $(FLAGS) $(FILES) -o $@
-
-unit_testing: $(FILES_UNIT_TESTING) $(HDR)
-	$(CC) $(FLAGS_UNIT_TESTING) $(FILES_UNIT_TESTING) -o stack
+all:
+	$(CC) $(FLAGS) $(FILES)
 
 
 clean:
